[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/LevelUI/LevelCompleted.gd" type="Script" id=1]
[ext_resource path="res://resources/images/game_over_bg.png" type="Texture" id=2]

[node name="LevelCompleted" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="LevelCompleted" type="Node2D" parent="."]
visible = false

[node name="GridContainer" type="GridContainer" parent="LevelCompleted"]
margin_left = 24.0
margin_top = 295.0
margin_right = 998.0
margin_bottom = 572.0
custom_constants/hseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLvlBtn" type="Button" parent="LevelCompleted/GridContainer"]
margin_right = 477.0
margin_bottom = 150.0
size_flags_horizontal = 3
text = "Next Level"

[node name="MainMenuBtn" type="Button" parent="LevelCompleted/GridContainer"]
margin_left = 497.0
margin_right = 974.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 3
text = "Main Menu"

[node name="Label" type="Label" parent="LevelCompleted"]
margin_left = 326.319
margin_top = 61.7361
margin_right = 434.319
margin_bottom = 75.7361
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Level Completed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_completed_bg" type="Sprite" parent="LevelCompleted"]
position = Vector2( -54.1766, -31.498 )
scale = Vector2( 1128.63, 647.339 )
texture = ExtResource( 2 )
[connection signal="pressed" from="LevelCompleted/GridContainer/NextLvlBtn" to="." method="_on_NextLvlBtn_pressed"]
[connection signal="pressed" from="LevelCompleted/GridContainer/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
